# vex-memory-sdk

./: .gitignore  CHANGELOG.md  CLI_DOCS.md  CLI_IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  SUBAGENT_REPORT.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  verify_cli.sh
docs/: quickstart.md
examples/: 01_basic_usage.py  02_context_building.py  03_sessions.py  04_namespaces.py  cli_examples.sh
tests/: __init__.py  test_cli.py  test_client.py  test_integration.py
vex_memory/: __init__.py  cli.py  cli_config.py  cli_output.py  cli_utils.py  client.py  client.py.backup  client_autotuning.py  exceptions.py  models.py  resilience.py  resources.py  utils.py
